--- a/HealthcareSystem/WebContent/WEB-INF/web.xml
+++ b/HealthcareSystem/WebContent/WEB-INF/web.xml
@@ -14,6 +14,11 @@
  		<url-pattern>/AppointmentService/*</url-pattern>
   </servlet-mapping>
   
+    <servlet-mapping>
+ 		<servlet-name>Jersey Web Application</servlet-name>
+ 		<url-pattern>/AppointmentViewService/*</url-pattern>
+   </servlet-mapping>
+  
   
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
